feature(setup-social-login): add complete social login
- adds sign in with google
- adds sign in with facebookn
- register user if not exists
- generate JSON Web Token for user
- return user public data with token
- adds complete social login with google & facebook
- adds tests for login with facebook & google
- adds documentation for social login
- adds required env vars for review apps in app.json
- allowNull on username and password for SSO to work
- adds fix for database connection fails in production
- add fix for facebook login issue on prod env on heroku

[Finishes #168050000]
